Secure Supabase keys - move to GitHub Secrets

--- a/nurse.html
+++ b/nurse.html
@@ -295,8 +295,8 @@
         };
         
         // Database Configuration (use different names to avoid clashes with auth.js globals)
-        const LOCAL_SUPABASE_URL = 'https://vpmuooztcqzrrfsvjzwl.supabase.co';
-        const LOCAL_SUPABASE_ANON_KEY = 'sb_publishable_B-5KuQJXEpxkd167_iraZw_IdvsPJNx';
+        const LOCAL_SUPABASE_URL = 'your_supabase_url_here';
+        const LOCAL_SUPABASE_ANON_KEY = 'your_supabase_anon_key_here';
 
         // AI API Configuration - Browser Compatible
         const AI_CONFIG = {
