--- a/medication.html
+++ b/medication.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nrome - Medication Delivery & Prescription Management</title>
      <link rel="icon" href="Images/nrome-logo.png" type="image/png" />
+    <!-- Local development config (gitignored) - Load before other scripts -->
+    <script src="config.local.js"></script>
     <!-- Supabase Client -->
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
