--- a/nurse.html
+++ b/nurse.html
@@ -2810,43 +2810,41 @@ Keep your response concise and professional. Focus on the medical assessment.`;
 
     <!-- Smart Triage Modal -->
     <div id="triageModal" class="modal fade" tabindex="-1">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog modal-xl">
             <div class="modal-content">
                 <div class="modal-header bg-info text-white">
                     <h5 class="modal-title">📋 Smart Triage - AI Patient Assessment</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <div class="mb-3">
-                                <label class="form-label">Patient Symptoms (describe in detail):</label>
-                                <textarea id="triageSymptoms" class="form-control" rows="4" placeholder="e.g., Chest pain, shortness of breath, started 2 hours ago..."></textarea>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <label class="form-label">Age:</label>
-                                    <input type="number" id="triageAge" class="form-control" placeholder="Patient age">
-                                </div>
-                                <div class="col-md-6">
-                                    <label class="form-label">Gender:</label>
-                                    <select id="triageGender" class="form-control">
-                                        <option value="">Select gender</option>
-                                        <option value="male">Male</option>
-                                        <option value="female">Female</option>
-                                        <option value="other">Other</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="mt-3">
-                                <button class="btn btn-info" onclick="performTriage()">🔍 Analyze Symptoms</button>
-                            </div>
+                    <div class="mb-3">
+                        <label class="form-label">Patient Symptoms (describe in detail):</label>
+                        <textarea id="triageSymptoms" class="form-control" rows="4" placeholder="e.g., Chest pain, shortness of breath, started 2 hours ago..."></textarea>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label class="form-label">Age:</label>
+                            <input type="number" id="triageAge" class="form-control" placeholder="Patient age">
                         </div>
-                        <div class="col-md-4">
-                            <h6>🚨 Triage Result</h6>
-                            <div id="triageResult" class="triage-result p-3" style="border: 2px solid #17a2b8; border-radius: 8px; background: #f8f9fa;">
-                                <em class="text-muted">Enter symptoms and click "Analyze" to get AI triage assessment...</em>
-                            </div>
+                        <div class="col-md-6">
+                            <label class="form-label">Gender:</label>
+                            <select id="triageGender" class="form-control">
+                                <option value="">Select gender</option>
+                                <option value="male">Male</option>
+                                <option value="female">Female</option>
+                                <option value="other">Other</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <button class="btn btn-info btn-lg w-100" onclick="performTriage()">🔍 Analyze Symptoms</button>
+                    </div>
+                    
+                    <div class="mt-4">
+                        <h6>🚨 Triage Result</h6>
+                        <div id="triageResult" class="triage-result p-3" style="border: 2px solid #17a2b8; border-radius: 8px; background: #f8f9fa;">
+                            <em class="text-muted">Enter symptoms and click "Analyze" to get AI triage assessment...</em>
+                        </div>
 
                         </div>
                     </div>
