Add Voice Medical Scribe History to Dashboard
- Created voice_scribe_sessions table for storing transcriptions, clinical notes, and PDFs
- Updated exportNotes() to save PDF as base64 to database
- Added comprehensive Voice Scribe History section in dashboard
- Implemented view, download, and delete functions for voice scribe sessions
- Sessions display transcription preview, AI notes, and PDF viewing options
- All voice scribe data now persists and can be reviewed from dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -147,6 +147,20 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-lg-12">
+                <div class="card shadow-sm">
+                    <div class="card-header bg-success text-white d-flex justify-content-between align-items-center">
+                        <span><i class="fas fa-microphone me-2"></i>Voice Medical Scribe History</span>
+                        <div class="btn-group btn-group-sm">
+                            <button class="btn btn-outline-light" onclick="loadVoiceScribeHistory()"><i class="fas fa-sync-alt me-1"></i>Refresh</button>
+                        </div>
+                    </div>
+                    <div class="card-body" id="voiceScribeHistoryList">
+                        <div class="text-muted">Loading voice scribe history...</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
