Remove FREE branding from AI Medical Assistant

--- a/nurse.html
+++ b/nurse.html
@@ -3145,13 +3145,10 @@ Keep your response concise and professional. Focus on the medical assessment.`;
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header bg-primary text-white">
-                    <h5 class="modal-title">🤖 AI Medical Assistant - Nrome Health (100% FREE)</h5>
+                    <h5 class="modal-title">🤖 AI Medical Assistant - Nrome Health</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <div class="alert alert-success">
-                        <strong>🆓 FREE AI Service!</strong> No OpenAI subscription needed. Using advanced rule-based AI + free Hugging Face models.
-                    </div>
                     <div id="chatContainer" class="chat-container mb-3" style="height: 400px; overflow-y: auto; border: 1px solid #ddd; padding: 10px; border-radius: 8px;">
                         <div class="ai-message">
                             <strong>🤖 AI Assistant:</strong> Hello! I'm your FREE AI medical assistant. I can help with:
@@ -3163,8 +3160,6 @@ Keep your response concise and professional. Focus on the medical assessment.`;
                                 <li>🚨 Emergency care guidance</li>
                             </ul>
                             How can I assist you today? <em>(Available in English, French, Swahili, Amharic, Arabic & more)</em>
-                            <br><br>
-                            <small class="text-success">✨ <strong>Powered by FREE AI</strong> - No expensive APIs needed!</small>
                         </div>
                     </div>
                     <div class="input-group">
@@ -3174,8 +3169,6 @@ Keep your response concise and professional. Focus on the medical assessment.`;
                     </div>
                     <div class="mt-2">
                         <small class="text-muted">⚠️ This AI provides general health information only. Always consult qualified practitioners for medical advice.</small>
-                        <br>
-                        <small class="text-success">✨ <strong>100% FREE AI</strong> - No subscription fees or API costs!</small>
                     </div>
                 </div>
             </div>
