--- a/dashboard.html
+++ b/dashboard.html
@@ -95,8 +95,12 @@
                 <div class="card shadow-sm">
                     <div class="card-header bg-success text-white d-flex justify-content-between align-items-center">
                         <span><i class="fas fa-microphone me-2"></i>Voice Medical Scribe History</span>
-                        <div class="btn-group btn-group-sm">
-                            <button class="btn btn-outline-light" onclick="loadVoiceScribeHistory()"><i class="fas fa-sync-alt me-1"></i>Refresh</button>
+                        <div class="d-flex gap-2">
+                            <div class="btn-group btn-group-sm" role="group">
+                                <button type="button" class="btn btn-outline-light active" id="voiceScribeLatestBtn" onclick="toggleVoiceScribeView('latest')">Latest</button>
+                                <button type="button" class="btn btn-outline-light" id="voiceScribeAllBtn" onclick="toggleVoiceScribeView('all')">All</button>
+                            </div>
+                            <button class="btn btn-sm btn-outline-light" onclick="loadVoiceScribeHistory()"><i class="fas fa-sync-alt me-1"></i>Refresh</button>
                         </div>
                     </div>
                     <div class="card-body" id="voiceScribeHistoryList">
