--- a/dashboard.html
+++ b/dashboard.html
@@ -18,16 +18,28 @@
     </div>
 
     <div class="container mt-5 pt-4 mb-5">
-        <div class="d-flex justify-content-between align-items-center mt-3">
-            <div>
+        <!-- Fixed Sign Out Button -->
+        <div class="fixed-top p-3 d-flex justify-content-end">
+            <button class="btn btn-danger" data-auth="signout">Sign out</button>
+        </div>
+
+        <!-- Header with responsive navigation -->
+        <div class="row align-items-center mt-3 g-3">
+            <div class="col-12 col-md-6">
                 <h1 class="h3 mb-2">Care Dashboard</h1>
                 <p class="text-muted mb-0">Appointments, prescriptions, deliveries, and your practitioner profile in one place.</p>
             </div>
-            <div class="d-flex gap-2">
-                <a class="btn btn-outline-secondary" href="nurse.html">Practitioners</a>
-                <a class="btn btn-outline-secondary" href="medication.html">Medication</a>
-                <div class="fixed-top p-3 d-flex justify-content-end">
-                    <button class="btn btn-danger" data-auth="signout">Sign out</button>
+            <div class="col-12 col-md-6">
+                <div class="d-flex flex-column flex-sm-row gap-2 justify-content-md-end">
+                    <a class="btn btn-outline-secondary" href="nurse.html">
+                        <i class="fas fa-user-md me-1"></i>Practitioners
+                    </a>
+                    <a class="btn btn-outline-secondary" href="medication.html">
+                        <i class="fas fa-pills me-1"></i>Medication
+                    </a>
+                    <a class="btn btn-outline-primary d-none" href="admin-pharmacy-review.html" id="adminPharmacyLink">
+                        <i class="fas fa-hospital me-1"></i>Pharmacy Review
+                    </a>
                 </div>
             </div>
         </div>
