--- a/nurse.html
+++ b/nurse.html
@@ -51,7 +51,7 @@
     <div class="container mt-5 pt-5" id="landingContainer">
          <!-- Link to Nurse Services -->
  <div class="end-0 p-0 text-end mb-2">
-    <a href="index.html" class="btn btn-info">Home</a>
+    <a href="dashboard.html" class="btn btn-info"><i class="fas fa-home me-1"></i>Dashboard</a>
 </div>
 
         <!-- Page Description -->
