--- a/nurse.html
+++ b/nurse.html
@@ -3600,7 +3600,7 @@ Keep your response concise and professional. Focus on the medical assessment.`;
         <div class="modal-dialog modal-xl">
             <div class="modal-content">
                 <div class="modal-header bg-success text-white">
-                    <h5 class="modal-title">📅 AI-Powered Appointment Booking</h5>
+                    <h5 class="modal-title">🤖 AI-Powered Appointment Booking</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
