--- a/pharmacy-register.html
+++ b/pharmacy-register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nrome - Pharmacy Registration</title>
+    <title>Nrome - Pharmacy Manager Registration</title>
     <link rel="icon" href="Images/nrome-logo.png" type="image/png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -15,13 +15,13 @@
             <div class="col-lg-8">
                 <div class="text-center mb-4">
                     <img src="Images/nrome-logo.png" alt="Nrome Logo" style="height: 100px;">
-                    <h1 class="h3 mt-3"><i class="fas fa-hospital me-2"></i>Pharmacy Registration</h1>
-                    <p class="text-muted">Join Nrome's Medication Delivery Network</p>
+                    <h1 class="h3 mt-3"><i class="fas fa-user-md me-2"></i>Pharmacy Manager Registration</h1>
+                    <p class="text-muted">Step 1: Create Your Manager Account</p>
                 </div>
 
                 <div class="card shadow-sm">
                     <div class="card-header bg-primary text-white">
-                        <h5 class="mb-0"><i class="fas fa-user-plus me-2"></i>Create Pharmacy Account</h5>
+                        <h5 class="mb-0"><i class="fas fa-user-plus me-2"></i>Create Manager Account</h5>
                     </div>
                     <div class="card-body">
                         <div class="alert alert-info">
@@ -35,75 +35,34 @@
 
                         <form id="pharmacyRegisterForm">
                             <div class="row g-3">
-                                <div class="col-md-6">
+                                <div class="col-12">
                                     <label class="form-label">Manager Full Name <span class="text-danger">*</span></label>
                                     <input type="text" class="form-control" id="managerName" required>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-12">
                                     <label class="form-label">Email Address <span class="text-danger">*</span></label>
                                     <input type="email" class="form-control" id="managerEmail" required>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-12">
                                     <label class="form-label">Password <span class="text-danger">*</span></label>
                                     <input type="password" class="form-control" id="managerPassword" required minlength="6">
+                                    <div class="form-text">Minimum 6 characters</div>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-12">
                                     <label class="form-label">Phone Number <span class="text-danger">*</span></label>
                                     <input type="tel" class="form-control" id="managerPhone" required>
                                 </div>
-                                <div class="col-12">
-                                    <hr>
-                                    <h6><i class="fas fa-hospital me-2"></i>Pharmacy Information</h6>
-                                </div>
-                                <div class="col-md-6">
-                                    <label class="form-label">Pharmacy Name <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" id="pharmacyName" required>
-                                </div>
-                                <div class="col-md-6">
-                                    <label class="form-label">SAPC Number <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" id="sapcNumber" required>
-                                </div>
-                                <div class="col-md-6">
-                                    <label class="form-label">Phone <span class="text-danger">*</span></label>
-                                    <input type="tel" class="form-control" id="pharmacyPhone" required>
-                                </div>
-                                <div class="col-md-6">
-                                    <label class="form-label">Email <span class="text-danger">*</span></label>
-                                    <input type="email" class="form-control" id="pharmacyEmail" required>
-                                </div>
-                                <div class="col-12">
-                                    <label class="form-label">Street Address <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" id="streetAddress" required>
-                                </div>
-                                <div class="col-md-4">
-                                    <label class="form-label">City <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" id="city" required>
-                                </div>
-                                <div class="col-md-4">
-                                    <label class="form-label">Province <span class="text-danger">*</span></label>
-                                    <select class="form-select" id="province" required>
-                                        <option value="">Select Province</option>
-                                        <option value="Gauteng">Gauteng</option>
-                                        <option value="Western Cape">Western Cape</option>
-                                        <option value="KwaZulu-Natal">KwaZulu-Natal</option>
-                                        <option value="Eastern Cape">Eastern Cape</option>
-                                        <option value="Free State">Free State</option>
-                                        <option value="Limpopo">Limpopo</option>
-                                        <option value="Mpumalanga">Mpumalanga</option>
-                                        <option value="Northern Cape">Northern Cape</option>
-                                        <option value="North West">North West</option>
-                                    </select>
-                                </div>
-                                <div class="col-md-4">
-                                    <label class="form-label">Postal Code</label>
-                                    <input type="text" class="form-control" id="postalCode">
-                                </div>
+                            </div>
+
+                            <div class="alert alert-info mt-3">
+                                <i class="fas fa-info-circle me-2"></i>
+                                <strong>Next Steps:</strong> After creating your account and confirming your email, you'll be able to register your pharmacy details.
                             </div>
 
                             <div class="form-check mt-3">
                                 <input class="form-check-input" type="checkbox" id="termsAccept" required>
                                 <label class="form-check-label" for="termsAccept">
-                                    I confirm that all information is accurate and I accept the terms and conditions
+                                    I accept the terms and conditions
                                 </label>
                             </div>
 
@@ -114,7 +73,7 @@
                                     <i class="fas fa-arrow-left me-2"></i>Back
                                 </a>
                                 <button type="submit" class="btn btn-success btn-lg">
-                                    <i class="fas fa-paper-plane me-2"></i>Submit Application
+                                    <i class="fas fa-user-plus me-2"></i>Create Account
                                 </button>
                             </div>
                         </form>
@@ -141,79 +100,58 @@
             }
 
             try {
-                const email = document.getElementById('managerEmail').value;
+                const email = document.getElementById('managerEmail').value.trim();
                 const password = document.getElementById('managerPassword').value;
-                const fullName = document.getElementById('managerName').value;
-                const phone = document.getElementById('managerPhone').value;
+                const fullName = document.getElementById('managerName').value.trim();
+                const phone = document.getElementById('managerPhone').value.trim();
 
-                feedback.innerHTML = '<div class="alert alert-info">Creating account...</div>';
+                feedback.innerHTML = '<div class="alert alert-info"><i class="fas fa-spinner fa-spin me-2"></i>Creating your account...</div>';
 
+                // Sign up the pharmacy manager
                 const { data: authData, error: signUpError } = await window.supabaseClient.auth.signUp({
                     email: email,
                     password: password,
                     options: {
                         data: {
                             full_name: fullName,
-                            phone: phone
-                        }
+                            phone: phone,
+                            user_type: 'pharmacy_manager'
+                        },
+                        emailRedirectTo: window.location.origin + '/pharmacy-profile-setup.html'
                     }
                 });
 
                 if (signUpError) throw signUpError;
                 const user = authData.user;
+                const session = authData.session;
 
-                feedback.innerHTML = '<div class="alert alert-info">Saving pharmacy information...</div>';
+                // Check if email confirmation is required
+                if (!session) {
+                    feedback.innerHTML = `
+                        <div class="alert alert-success">
+                            <h5><i class="fas fa-check-circle me-2"></i>Account Created Successfully!</h5>
+                            <p><strong>📧 Email Confirmation Required</strong></p>
+                            <p>We've sent a confirmation email to <strong>${email}</strong></p>
+                            <p>Please check your inbox and click the confirmation link to activate your account.</p>
+                            <hr>
+                            <p class="mb-0"><i class="fas fa-info-circle me-2"></i>After confirming your email, log in to complete your pharmacy registration.</p>
+                        </div>
+                    `;
+                    
+                    // Disable form submission
+                    form.reset();
+                    return;
+                }
 
-                await window.supabaseClient
-                    .from('user_profiles')
-                    .insert({
-                        id: user.id,
-                        full_name: fullName,
-                        email: email,
-                        phone_number: phone
-                    });
-
-                const { data: pharmacy, error: pharmacyError } = await window.supabaseClient
-                    .from('pharmacies')
-                    .insert({
-                        owner_id: user.id,
-                        pharmacy_name: document.getElementById('pharmacyName').value,
-                        sapc_number: document.getElementById('sapcNumber').value,
-                        phone_number: document.getElementById('pharmacyPhone').value,
-                        email: document.getElementById('pharmacyEmail').value,
-                        address: `${document.getElementById('streetAddress').value}, ${document.getElementById('city').value}, ${document.getElementById('province').value}, ${document.getElementById('postalCode').value}`,
-                        is_verified: false,
-                        is_active: false
-                    })
-                    .select()
-                    .single();
-
-                if (pharmacyError) throw pharmacyError;
-
-                await window.supabaseClient
-                    .from('pharmacy_verifications')
-                    .insert({
-                        pharmacy_id: pharmacy.id,
-                        verification_status: 'pending'
-                    });
-
-                await window.supabaseClient
-                    .from('user_role_assignments')
-                    .insert({
-                        user_id: user.id,
-                        role: 'pharmacy_manager',
-                        organization_id: pharmacy.id,
-                        is_active: true
-                    });
-
-                feedback.innerHTML = '<div class="alert alert-success">✅ Application submitted successfully! Redirecting to dashboard...</div>';
+                // If auto-confirmed, redirect to pharmacy profile setup page
+                feedback.innerHTML = '<div class="alert alert-success"><i class="fas fa-check me-2"></i>Account created! Redirecting to complete pharmacy registration...</div>';
                 setTimeout(() => {
-                    window.location.href = 'dashboard.html';
+                    window.location.href = 'pharmacy-profile-setup.html';
                 }, 2000);
 
             } catch (error) {
                 console.error('Registration error:', error);
-                feedback.innerHTML = `<div class="alert alert-danger">Error: ${error.message}</div>`;
+                feedback.innerHTML = `<div class="alert alert-danger"><i class="fas fa-exclamation-circle me-2"></i><strong>Error:</strong> ${error.message}</div>`;
             }
         });
     </script>
